service/springdemo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-service
  namespace: dev
  labels:
    app: demo-service
    dev/version: '1d0982e'
  annotations:
    configmap.reloader.stakater.com/reload: demo-service
spec:
  selector:
    matchLabels:
      app: demo-service
  template:
    metadata:
      labels:
        app: demo-service
        dev/version: '1d0982e'
    spec:
      serviceAccountName: demo-service
      containers:
        - name: demo-service
          image: 093113466774.dkr.ecr.ap-northeast-2.amazonaws.com/sample-app:1d0982e
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "300m"
            requests:
              memory: "128Mi"
              cpu: "300m"
          ports:
            - containerPort: 8080
      nodeSelector:
        alpha.eksctl.io/nodegroup-name: worker
