service/springdemo/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  namespace: dev
  labels:
    app: demo-service
    service: demo-service
spec:
  selector:
    app: demo-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    name: http
  type: ClusterIP
